query optimization and N+1 issue solved